Add swagger to auth
